cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__combined_components_doctor_style.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
=== Cassy Doctor ===

[OK] Store connected
[OK] Schema up to date
[WARN] Index stale

Entries: 142
  Rules: 5
  Tasks: 23
