cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__combined_doctor_output_plain_80.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
--- Cassy Doctor ---

Store
Database: /home/user/.cas/store.db
Size: 2.4 MB
[OK] Store connected

Search Index
Entries: 142
[OK] Index healthy

--------------------------------------------------------------------------------
[INFO] All systems operational
