cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__header_h1_styled_dark.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output_plain()
---
═══ Cassy Doctor ═══
