cas-cli/src/ui/components/snapshots/cas__ui__components__snapshot_tests__tests__heading_plain_80.snap
---
source: cas-cli/src/ui/components/snapshot_tests.rs
expression: tf.output()
---
--- Cassy Doctor ---
